<resources>
    <string name="app_name">ProcyectoMovil</string>
    <string name="login">INICIAR SESIÓN</string>
    <string name="msg_cuenta">¿No tienes una cuenta?</string>
    <string name="msg_crear_cuenta">Crear cuenta</string>
    <string name="msg_failure">Error de registro</string>
    <string name="welcome">Bienvenidos Restaurante Bambú</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="msg_olvido">¿Se te olvido la contraseña?</string>

    <string name="msg_orden">Mi orden</string>
    <string name="msg_comida">Comida Seleccionada</string>
    <string name="msg_subtotal">Sub Total</string>
    <string name="msg_iva">Impuestos IVA</string>
    <string name="msg_total">Total</string>
    <string name="msg_categoria">Categoria</string>
    <string name="msg_agregar">Agregar Compra</string>
    <string name="msg_precio">Precio Total</string>


    <string name="registre">CREAR CUENTA</string>
    <string name="user">Nombre</string>
    <string name="confirmar_password">Confirmar Contraseña</string>
    <string name="crear">CREAR CUENTA</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Usuario</string>
    <string name="nav_header_subtitle">usuario@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="msg_gracias">Gracias por su compra!</string>
    <string name="msg_sinpe">Pagar con SINPE</string>
    <string name="msg_restaurante">Pagar en Restaurante</string>
    <string name="msg_cancelar">Cancelar Orden</string>

    <string name="msg_ord">¿Que vas a ordenar hoy?</string>
    <string name="msg_buscar">Buscar</string>
    <string name="msg_categorias">Categorias</string>
    <string name="msg_populares">Populares</string>
    <string name="menu_home">Home</string>
    <string name="menu_ordenar">Ordenar</string>
    <string name="menu_pagar">Pagar</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="msg_ordenar">Mi orden</string>
     <string name="msg_seleccionada">Comida seleccionada</string>
    <string name="msg_sub">Sub Total</string>
    <string name="msg_impuesto">Impuesto IVA</string>
    <string name="msg_tol">TOTAL</string>
</resources>